--- a/projekcik.html
+++ b/projekcik.html
@@ -14,7 +14,7 @@
     <header>
         <h3>Instrukcja</h3>
         <section>
-            Podczas pisania, aby przejść do następnej linijki wciśnij klawisz Tab. Gdy stwierdzisz, że chcesz przejść do kolejnego poziomu wciśnij przycisk na dole strony, następnie wybierz którą lekce wybierasz.
+            Podczas pisania, aby przejść do następnej linijki wciśnij klawisz Tab. Po zakończeniu pełnego zadania wciśnij klawisz enter. Gdy stwierdzisz, że chcesz przejść do kolejnego poziomu wciśnij przycisk na dole strony następnie wybierz którą lekcje wybierasz.
         </section>
     </header>
     <nav>
@@ -46,28 +46,17 @@
         <section class="s1"></section>
 
         <input type="text" class="rzad2_wpis" maxlength="29"><br>
-<!-- 
-        <section class="s1"></section>
-
-        <input type="text" class="rzad3_wpis" maxlength="29"><br>
-
-        <section class="s1"></section>
-
-        <input type="text" class="rzad4_wpis" maxlength="29"> -->
     </section>
     <section>
         <form>
             <p class="bledy">Błędy</p>
             <div class="super"></div>
-            <!-- <input type="button" value="koniec" class="prz" style="display: none"> -->
             <input type="submit" value="Aby wybrać kolejny poziom wciśnij" class="prz" style="display:none">
         </form>
         
         
     </section>
-    <!-- <div id="sprawdzonko"></div>
-    <div id="spr"></div>
-    <div id="us"></div> -->
+
     </main>
     <script src="dzialanie.js"></script>
 
