--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <form>
             <p class="bledy">Błędy</p>
             <div class="super"></div>
+            <div class="st"></div>
             <input type="submit" value="Aby wybrać kolejny poziom wciśnij" class="prz" style="display:none">
         </form>
         
